--- a/index.html
+++ b/index.html
@@ -13,6 +13,13 @@
         <div class="date-container">
           <div class="time" id="time">12:30 <span id="am-pm">PM</span></div>
           <div class="date" id="date">Monday, 25 May</div>
+
+          <div class="others" id="current-weather-items"></div>
+        </div>
+
+        <div class="place-container">
+          <div class="time-zone" id="time-zone">Asia/Kolkata</div>
+          <div id="country" class="country">IN</div>
         </div>
       </div>
     </div>
